<resources>
    <string name="app_name">Weather Widget</string>
    <string name="weather_settings_title">Weather</string>
    <string name="menu_settings_unit">Unit</string>
    <string name="menu_settings_update">Auto refresh</string>
    <string name="refresh_time_none">None</string>
    <string name="refresh_time_1h">Every 1 hour</string>
    <string name="refresh_time_3h">Every 3 hours</string>
    <string name="refresh_time_6h">Every 6 hours</string>
    <string name="refresh_time_12h">Every 12 hours</string>
    <string name="refresh_time_24h">Every 24 hours</string>
    <string name="weather_text_01">Sunny</string>
    <string name="weather_text_01_night">Clear</string>
    <string name="weather_text_02">Partly Cloudy</string>
    <string name="weather_text_03">Mostly Cloudy</string>
    <string name="weather_text_04">Cloudy</string>
    <string name="weather_text_05">Cloudy then clearing</string>
    <string name="weather_text_06">Sunny then clouding over</string>
    <string name="weather_text_06_night">Clear then clouding over</string>
    <string name="weather_text_07">Mostly Cloudy With Showers</string>
    <string name="weather_text_08">Mostly Cloudy With Showers</string>
    <string name="weather_text_09">Mostly Cloudy With Showers</string>
    <string name="weather_text_10">Rain</string>
    <string name="weather_text_11">Rain</string>
    <string name="weather_text_12">Rain</string>
    <string name="weather_text_13">Becoming cloudy with rain</string>
    <string name="weather_text_14">Becoming cloudy with rain</string>
    <string name="weather_text_15">Rainy then clearing</string>
    <string name="weather_text_16">Rainy then clearing</string>
    <string name="weather_text_17">Rainy then clearing</string>
    <string name="weather_text_18">Snow</string>
    <string name="weather_text_19">Snow</string>
    <string name="weather_text_20">Snow</string>
    <string name="weather_text_21">Becoming cloudy with snow</string>
    <string name="weather_text_22">Becoming cloudy with snow</string>
    <string name="weather_text_23">Snow then clearing</string>
    <string name="weather_text_24">Snow then clearing</string>
    <string name="weather_text_25">Snow then clearing</string>
    <string name="weather_text_26">Rain/Snow</string>
    <string name="weather_text_27">Rain/Snow</string>
    <string name="weather_text_28">Rain/Snow</string>
    <string name="weather_text_29">Becoming cloudy with rain or snow</string>
    <string name="weather_text_30">Becoming cloudy with rain or snow</string>
    <string name="weather_text_31">Snow/Rain</string>
    <string name="weather_text_32">Snow/Rain</string>
    <string name="weather_text_33">Snow/Rain</string>
    <string name="weather_text_34">Becoming cloudy with snow or rain</string>
    <string name="weather_text_35">Becoming cloudy with snow or rain</string>
    <string name="weather_text_36">Snow or rain, then clearing</string>
    <string name="weather_text_37">Snow or rain, then clearing</string>
    <string name="weather_text_38">Snow or rain, then clearing</string>
    <string name="weather_text_39">Thunderstorms</string>
    <string name="weather_text_40">Fog</string>
    <string name="weather_state_00">Sunny</string>
    <string name="weather_state_01">Cloudy</string>
    <string name="weather_state_02">Overcast</string>
    <string name="weather_state_03">Shower</string>
    <string name="weather_state_04">Thundershower</string>
    <string name="weather_state_05">Thundershower with hail</string>
    <string name="weather_state_06">Sleet</string>
    <string name="weather_state_07">Light rain</string>
    <string name="weather_state_08">Moderate rain</string>
    <string name="weather_state_09">Heavy rain</string>
    <string name="weather_state_10">Storm</string>
    <string name="weather_state_11">Heavy storm</string>
    <string name="weather_state_12">Severe storm</string>
    <string name="weather_state_13">Snow flurry</string>
    <string name="weather_state_14">Light snow</string>
    <string name="weather_state_15">Moderate snow</string>
    <string name="weather_state_16">Heavy snow</string>
    <string name="weather_state_17">Snowstorm</string>
    <string name="weather_state_18">Foggy</string>
    <string name="weather_state_19">Ice rain</string>
    <string name="weather_state_20">Duststorm</string>
    <string name="weather_state_21">Light to moderate rain</string>
    <string name="weather_state_22">Moderate to heavy rain</string>
    <string name="weather_state_23">Heavy rain to storm</string>
    <string name="weather_state_24">Storm to heavy storm</string>
    <string name="weather_state_25">Heavy to severe storm</string>
    <string name="weather_state_26">Light to moderate snow</string>
    <string name="weather_state_27">Moderate to heavy snow</string>
    <string name="weather_state_28">Heavy snow to snowstorm</string>
    <string name="weather_state_29">Dust</string>
    <string name="weather_state_30">Sand</string>
    <string name="weather_state_31">Sandstorm</string>
    <string name="weather_state_53">Haze</string>
    <string name="weather_state_99">Unknown</string>
    <string name="sunny">Sunny</string>
    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="sleet">Sleet</string>
    <string name="hot">Hot</string>
    <string name="sunny_with_some_clouds">Sunny with some clouds</string>
    <string name="mainly_clear_with_patchy_cloud">Mainly clear with patchy cloud</string>
    <string name="cloudy_with_sunny_intervals">Cloudy with sunny intervals</string>
    <string name="cloudy_then_clearing">Cloudy then clearing</string>
    <string name="cloudy_with_scattered_rain">Cloudy with scattered rain</string>
    <string name="clouds_followed_by_rain">Clouds followed by rain</string>
    <string name="rain_with_patchy_cloud">Rain with patchy cloud</string>
    <string name="rain_then_still_cloudy">Rain then still cloudy</string>
    <string name="cloudy_with_scattered_heavy_rain">Cloudy with scattered heavy rain</string>
    <string name="clouds_followed_by_heavy_rain">Clouds followed by heavy rain</string>
    <string name="heavy_rain_with_patchy_cloud">Heavy rain with patchy cloud</string>
    <string name="heavy_rain_then_still_cloudy">Heavy rain then still cloudy</string>
    <string name="sunny_with_some_rain">Sunny with some rain</string>
    <string name="clear_with_occasional_showers">Clear with occasional showers</string>
    <string name="sunshine_followed_by_rain">Sunshine followed by rain</string>
    <string name="clear_then_rain">Clear then rain</string>
    <string name="rain_with_sunny_intervals">Rain with sunny intervals</string>
    <string name="rainy_then_clearing">Rainy then clearing</string>
    <string name="sunny_with_some_heavy_rain">Sunny with some heavy rain</string>
    <string name="clear_with_occasional_heavy_showers">Clear with occasional heavy showers</string>
    <string name="heavy_rain_with_sunny_intervals">Heavy rain with sunny intervals</string>
    <string name="heavy_rain_followed_by_sunshine">Heavy rain followed by sunshine</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="light_rain_with_some_heavy_rain">Light rain with some heavy rain</string>
    <string name="light_rain_followed_by_heavy_rain">Light rain followed by heavy rain</string>
    <string name="heavy_rain_with_some_light_rain">Heavy rain with some light rain</string>
    <string name="heavy_rain_followed_by_light_rain">Heavy rain followed by intense heat</string>
    <string name="cloudy_with_scattered_snow">Cloudy with scattered snow</string>
    <string name="cloud_followed_by_snow">Cloud followed by snow</string>
    <string name="snow_with_some_cloud">Snow with some cloud</string>
    <string name="snow_followed_by_cloudy_skies">Snow followed by cloudy skies</string>
    <string name="rain_with_some_snow">Rain with some snow</string>
    <string name="rain_followed_by_snow">Rain followed by snow</string>
    <string name="snow_with_some_rain">Snow with some rain</string>
    <string name="snow_followed_by_rain">Snow followed by rain</string>
    <string name="snow_with_some_heavy_rain">Snow with some heavy rain</string>
    <string name="snow_followed_by_heavy_rain">Snow followed by heavy rain</string>
    <string name="heavy_rain_with_some_snow">Heavy rain with some snow</string>
    <string name="heavy_rain_followed_by_snow">Heavy rain followed by snow</string>
    <string name="sunny_with_some_snow">Sunny with some snow</string>
    <string name="clear_with_occasional_snow_showers">Clear with occasional snow showers</string>
    <string name="sunshine_followed_by_snow">Sunshine followed by snow</string>
    <string name="clear_then_occasional_snow_showers">Clear then occasional snow showers</string>
    <string name="snow_with_sunny_intervals">Snow with sunny intervals</string>
    <string name="snow_with_clear_spells">Snow with clear spells</string>
    <string name="snow_then_clearing">Snow then clearing</string>
    <string name="intense_heat_with_patchy_cloud">Intense heat with patchy cloud</string>
    <string name="intense_heat_followed_by_clouds">Intense heat followed by clouds</string>
    <string name="cloudy_with_hot_spells">Cloudy with hot spells</string>
    <string name="cloudy_followed_by_intense_heat">Cloudy followed by intense heat</string>
    <string name="intense_heat_with_some_rain">Intense heat with some rain</string>
    <string name="intense_heat_with_some_heavy_rain">Intense heat with some heavy rain</string>
    <string name="intense_heat_followed_by_rain">Intense heat followed by rain</string>
    <string name="intense_heat_followed_by_heavy_rain">Intense heat followed by heavy rain</string>
    <string name="rain_with_hot_spells">Rain with hot spells</string>
    <string name="rain_followed_by_intense_heat">Rain followed by intense heat</string>
    <string name="heavy_rain_followed_by_intense_heat">Heavy rain followed by intense heat</string>
    <string name="heavy_rain_with_hot_spells">Heavy rain with hot spells</string>
    <string name="sunshine_followed_by_clouds">Sunshine followed by clouds</string>
    <string name="clear_then_cloudy">Clear then cloudy</string>
    <string name="sunshine_followed_by_heavy_rain">Sunshine followed by heavy rain</string>
    <string name="clear_then_heavy_rain">Clear then heavy rain</string>
    <string name="farenheit">°F</string>
    <string name="centigrade">°C</string>
    <string name="dialog_title_charging">Notification of charges</string>
    <string name="notice_accurate_location_detection_msg">For the fastest and most accurate location detection, go to Settings > Privacy and safety > Location > Locating method, and select GPS, Wi-Fi, and mobile networks.</string>
    <string name="notice_gps_turn_off_message">Location services have been disabled. Go to Settings.</string>
    <string name="notice_gps_trun_off_message_verizon">To view your local weather information, turn on Location settings and make sure the mode is set to High accuracy.</string>
    <string name="dialog_title_gps_info">Current location</string>
    <string name="menu_current_city_show">Use current location</string>
    <string name="show_menu_current_city_show">Show weather updates</string>
    <string name="message_network_unavailable">Network not available.</string>
    <string name="message_network_connnection_failed">Connection failed.</string>
    <string name="dialog_gps_progressing">Locating. Please wait...</string>
    <string name="menu_settings_subtitle_Show_weather_information">Show weather information</string>
    <string name="menu_settings_edge_screen">Edge screen</string>
    <string name="menu_settings_lockscreen_and_s_view_cover">Lock screen &amp; S View cover</string>
    <string name="menu_settings_s_planner">S Planner</string>
</resources>